changed the start command

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon Index.js"
+    "start": "node Index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
