--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node Index.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.2",
     "cookie-parser": "^1.4.6",
